<resources>
    <string name="app_name">Ex11</string>
    <string name="btPushText">Push me!</string>
    <string name="intro">Hello, you can use this application to check\n your skills on temperature conversion, or\n calculate the correct value</string>
    <string name="RBcalc">Calculate</string>
    <string name="RBcheck">Check</string>
    <string name="Bgo">Go!</string>
    <string name="TVfarenheit">Farenheit</string>
    <string name="TVcelcius">Celcius</string>
    <string name="add">Add new</string>
    <string name="Breturn">Return</string>
    <string name="closing">Are you ugly?</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="host">Hosting activity must imlements the interface ResultListerner</string>
    <string name="saveList">Rmember county shown</string>
    <string name="YourName">Your Name</string>
    <string name="summary">this is the backgrous of the \'Details\' screen. \nCurrent value: %s</string>
    <string name="AdvancedSettings">Advanced settings</string>
    <string name="LoadLOptions">Load options</string>
    <string name="Refresh">Refresh data when application starts</string>
    <string name="Auto">The countries data will be automatically refreshed from...</string>
    <string name="summaryAdv">The countries data will be automatically refreshed from the web upon starting the application</string>
    <string name="summaryUserName">Your name: %s</string>
</resources>
